Minor text and spacing size changes

--- a/blog-post.html
+++ b/blog-post.html
@@ -27,7 +27,7 @@
                 <li class="navListItem"><a href="./contact.html" class="link">Contact</a></li>
             </ul>
         </nav>
-        <h2 class="title title-page">DEFCON CTF Quals 2019 Tania</h2>
+        <h2 class="title title-page header">DEFCON CTF Quals 2019 Tania</h2>
     </header>
     <main>
         <div class="wrapper wrapper-fluid grid grid-twoCol">
@@ -62,7 +62,7 @@
     </main>
     <footer>
         <p>
-            <a href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
+            <a class="link" href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
         </p>
     </footer>
     <script src="./js/util.js"></script>
