--- a/blog.html
+++ b/blog.html
@@ -27,13 +27,13 @@
                 <li class="navListItem"><a href="./contact.html" class="link">Contact</a></li>
             </ul>
         </nav>
-        <h2 class="title title-page">Blog</h2>
+        <h2 class="title title-page header">Blog</h2>
     </header>
     <main>
         <section role="feed" id="postFeed">
             <article class="wrapper wrapper-fluid grid grid-twoCol">
                 <div class="postPreview">
-                    <h3 class="title subtitle"><a href="#" class="link">DEFCON CTF Quals 2019 Tania</a></h3>
+                    <h2 class="title subtitle"><a href="#" class="link">DEFCON CTF Quals 2019 Tania</a></h2>
                     <h5>May 13, 2019 / Avi Weinstock, Lense</h5>
                     <p>The easiest way to contact us is by email. Anything sent to this address will be automatically forwarded to the current club officers.</p>
                     <a href="#">Read more...</a>
@@ -41,7 +41,7 @@
             </article>
             <article class="wrapper wrapper-fluid grid grid-twoCol">
                 <div class="postPreview">
-                    <h3 class="title subtitle"><a href="#" class="link">CSAW CTF Qualification - wtf.sql</a></h3>
+                    <h2 class="title subtitle"><a href="#" class="link">CSAW CTF Qualification - wtf.sql</a></h2>
                     <h5>September 18, 2018 / zap</h5>
                     <p>This challange was from the CSAW Qualification round this year. It consisted of a forum-like application on a webserver written almost entirely in SQL. It was solved by zap, negasora and Hawkheart</p>
                     <a href="#">Read more...</a>
@@ -49,7 +49,7 @@
             </article>
             <article class="wrapper wrapper-fluid grid grid-twoCol">
                 <div class="postPreview">
-                    <h3 class="title subtitle"><a href="#" class="link">Real World CTF Quals 2018 - SCSI</a></h3>
+                    <h2 class="title subtitle"><a href="#" class="link">Real World CTF Quals 2018 - SCSI</a></h2>
                     <h5>August 01, 2018 / pernicious</h5>
                     <p>This challenge was from Real World CTF 2018. RPISEC was the only solve. I probably spent upwards of 20 hours on this challenge. Needless to say, this will be a somewhat lengthy writeup.</p>
                     <a href="#">Read more...</a>
@@ -59,7 +59,7 @@
     </main>
     <footer>
         <p>
-            <a href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
+            <a class="link" href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
         </p>
     </footer>
     <script src="./js/util.js"></script>
