--- a/index.html
+++ b/index.html
@@ -69,32 +69,32 @@
             <h2 class="title header">What we do</h2>
             <div class="grid grid-twoCol">
                 <section>
-                    <h3 class="title subtitle">Weekly Meetings</h3>
+                    <h2 class="title subtitle">Weekly Meetings</h2>
                     <p>On a weekly basis, the club hosts interactive educational presentations covering a wide variety of technical subjects related to the field of computer security. These presentations are open to anyone and include topics such as binary exploitation, assembly level reverse engineering, malware analysis, web security, cryptography, network security, digital forensics, and physical security (such as lockpicking).</p>
                     <p>These meetings are typically held in CII 4050 on Fridays from 5:00pm to 7:00pm. Any changes to this schedule will be announced on our <a href="mailto:#">mailing list.</a></p>
                     <p>Meeting notes for our weekly meetings can be found on <a href="#">The Ark</a>, an RPISEC hosted server accessible only from the RPI campus network.</p>
                 </section>
                 <section>
-                    <h3 class="title subtitle">INTROSEC</h3>
+                    <h2 class="title subtitle">INTROSEC</h2>
                     <p>During the Fall semester, we host INTROSEC meetings in addition to our regular Friday meetings. While our regular Friday meetings often cover advanced topics, INTROSEC meetings are designed for the absolute beginner to the field of computer security.</p>
                     <p>No prior experience is required to get involved with INTROSEC, and we do our best to accommodate students of all skill levels. In addition to the weekly lectures, INTROSEC also runs a semester long CTF which aims to teach students the skills required to complete more realistic challenges.</p>
                     <p>INTROSEC meetings are typically held in Union 3510 / 3511 on Tuesdays at 7:00pm.</p>
                 </section>
                 <section>
-                    <h3 class="title subtitle">Capture The Flag</h3>
+                    <h2 class="title subtitle">Capture The Flag</h2>
                     <p>RPISEC frequently participates in computer security “Capture the Flag” (“CTF”) competitions, in which teams from around the world gather to demonstrate their proficiency in various security topics. We compete in both of the popular “attack / defend” and “jeopardy” style CTFs for both online and on-site competitions hosted by a diverse community of international organizers. RPISEC currently ranks <a href="#">among the top teams in the world.</a></p>
                 </section>
                 <section>
-                    <h3 class="title subtitle">Provide Resources</h3>
+                    <h2 class="title subtitle">Provide Resources</h2>
                     <p>In 2014, RPISEC was granted a room on campus through the RPI Computer Science Department. We have used our CTF winnings (and some outside donations) for the purpose of actively developing this room into a collaborative workspace housing additional security resources and hardware, available exclusively to active members of RPISEC.</p>
                 </section>
                 <section>
-                    <h3 class="title subtitle">Connect With Industry</h3>
+                    <h2 class="title subtitle">Connect With Industry</h2>
                     <p>As a club made up of some of the top talent in the US computer security field, RPISEC understands the value of networking with industry. We maintain relationships with a number of prominent companies and organizations in order to connect RPISEC members with opportunities in the form of internships and full-time positions.</p>
                     <p>We are always looking to grow our network, so feel free to <a href="#">get in touch</a> if you are looking to open a channel between RPISEC and your company or organization.</p>
                 </section>
                 <section>
-                    <h3 class="title subtitle">Everything Else</h3>
+                    <h2 class="title subtitle">Everything Else</h2>
                     <p>Among other miscellaneous activities, RPISEC members attend prominent security conferences, participate in community outreach, bring in guest speakers from industry, and secure funding for the use of the club and its members.</p>
                 </section>
             </div>
@@ -111,7 +111,7 @@
     </main>
     <footer>
         <p>
-            <a href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
+            <a class="link" href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
         </p>
     </footer>
     <script src="./js/util.js"></script>
