--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                 <li class="navListItem"><a href="./contact.html" class="link selected">Contact</a></li>
             </ul>
         </nav>
-        <h2 class="title title-page">Contact</h2>
+        <h2 class="title title-page header">Contact</h2>
     </header>
     <main>
         <section role="feed" id="postFeed">
@@ -80,7 +80,7 @@
     </main>
     <footer>
         <p>
-            <a href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
+            <a class="link" href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
         </p>
     </footer>
     <script src="./js/util.js"></script>
