Changed link color on footer

--- a/blog-post.html
+++ b/blog-post.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>RPISEC</title>
-    <!--<link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/fonts.css" />
-    <link rel="stylesheet" href="./css/main.css" />-->
     <link rel="stylesheet" href="./css/framework.css" />
     <link rel="stylesheet" href="./css/main.css" />
 </head>
@@ -62,7 +59,7 @@
     </main>
     <footer>
         <p>
-            <a class="link" href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
+            <a href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
         </p>
     </footer>
     <script src="./js/util.js"></script>
