--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>RPISEC</title>
-    <!--<link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/fonts.css" />
-    <link rel="stylesheet" href="./css/main.css" />-->
     <link rel="stylesheet" href="./css/framework.css" />
     <link rel="stylesheet" href="./css/main.css" />
 </head>
@@ -33,7 +30,7 @@
         <section role="feed" id="postFeed">
             <article class="wrapper wrapper-fluid">
                 <div class="postPreview">
-                    <h3 class="title subtitle">Email</h3>
+                    <h2 class="title subtitle">Email</h2>
                     <div class="grid grid-threeCol">
                         <div>
                             <p>The easiest way to contact us is by email. Anything sent to this address will be automatically forwarded to the current club officers.</p>
@@ -48,7 +45,7 @@
             </article>
             <article class="wrapper wrapper-fluid">
                 <div class="postPreview">
-                    <h3 class="title subtitle">IRC</h3>
+                    <h2 class="title subtitle">IRC</h2>
                     <div class="grid grid-threeCol">
                         <div>
                             <p>No computer security organization would be complete without its IRC server.</p>
@@ -64,7 +61,7 @@
             </article>
             <article class="wrapper wrapper-fluid">
                 <div class="postPreview">
-                    <h3 class="title subtitle">Social Media</h3>
+                    <h2 class="title subtitle">Social Media</h2>
                     <div class="grid grid-threeCol">
                         <div>
                             <p>RPISEC additionally maintains a social media presence on Twitter.</p>
@@ -80,7 +77,7 @@
     </main>
     <footer>
         <p>
-            <a class="link" href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
+            <a href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
         </p>
     </footer>
     <script src="./js/util.js"></script>
