--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>RPISEC</title>
-    <!--<link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/fonts.css" />
-    <link rel="stylesheet" href="./css/main.css" />-->
     <link rel="stylesheet" href="./css/framework.css" />
     <link rel="stylesheet" href="./css/main.css" />
 </head>
@@ -34,7 +31,7 @@
             <h2 class="title header">Who we are</h2>
             <div class="grid grid-twoCol">
                 <section id="whoWeAre">
-                    <p>RPISEC is the resident computer security club at Rensselaer Polytechnic Institute. We are a student-run organization which was founded to provide resources for students interested in exploring the world of computer security.</p>
+                    <p>RPISEC is the resident computer security club at <a href="#">Rensselaer Polytechnic Institute</a>. We are a student-run organization which was founded to provide resources for students interested in exploring the world of computer security.</p>
                     <p>At our core, we are a group of self-taught security enthusiasts who enjoy sharing our knowledge with those interested in learning. We believe in the freedom of information, and do our best to prepare resources, organize meetings, and host educational events on our own time. Our current officers are as follows:</p>
                 </section>
                 <section class="officers grid grid-threeCol">
@@ -111,7 +108,7 @@
     </main>
     <footer>
         <p>
-            <a class="link" href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
+            <a href="https://binghamton.design">BDC</a> &times; RPISEC <span class="copyright">&copy; <span class="js-currentYear"></span></span>
         </p>
     </footer>
     <script src="./js/util.js"></script>
